--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{5C20367F-5D4C-1602-CF60-F8F2661298AA}</ProjectGuid>
+    <ProjectGuid>{2A72B2D4-8748-419A-7777-92D4F313E622}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -594,85 +594,85 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.2f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Runtime">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Animation.Runtime.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Animation.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.PixelPerfect.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.PixelPerfect.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.SpriteShape.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Path.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Path.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Triangle.Runtime">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="PsdPlugin">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/PsdPlugin.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/PsdPlugin.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Psdimporter.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Psdimporter.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Psdimporter.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InternalAPIEngineBridge.001">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.InternalAPIEngineBridge.001.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Sprite.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Common.Runtime">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Common.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Tilemap.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.SpriteShape.Runtime">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.SpriteShape.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.PixelPerfect">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.PixelPerfect.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.PixelPerfect.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Animation.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Animation.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.Mathematics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Common.Editor">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.2D.Common.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.InternalAPIEditorBridge.001">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/Unity.InternalAPIEditorBridge.001.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake Invaders V2/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>E:/Documents/GitHub/Snake_Invaders_V2/Snake-Invaders-V2.0/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
